# aeqi

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json
.observations/: findings-2026-04-04T20-36-21-497Z.json
.retired-agents/leader/: IDENTITY.md  PERSONA.md  agent.toml
.retired-agents/waifu/: KNOWLEDGE.md  OPERATIONAL.md  agent.toml
aeqi-cli/: Cargo.toml
aeqi-cli/src/: cli.rs  helpers.rs  main.rs
agents/aurelia/: agent.toml
agents/ceo/: agent.md  agent.toml
agents/cfo/: agent.md  agent.toml
agents/ciso/: agent.md
agents/coo/: agent.md  agent.toml
agents/cpo/: agent.md  (+1 more)
config/: aeqi.example.toml  aeqi.toml  sigil.example.toml  sigil.toml  system.toml
crates/sigil-channels/: Cargo.toml
crates/sigil-channels/src/: discord.rs  lib.rs  slack.rs  telegram.rs
crates/sigil-memory/: Cargo.toml
crates/sigil-memory/src/: chunker.rs  debounce.rs  dedup.rs  graph.rs  hybrid.rs  lib.rs  lifecycle.rs  query_planner.rs  retrieval.rs  sqlite.rs
docs/: ARCHITECTURE-V4.md  MASTER-SYNTHESIS.md  README.md  SIGIL.md  agent-loop-parity.md  architecture.md  claude-code-integration.md  deployment.md  design-v2.md  native-runtime.md  orchestration-redesign.md  project-setup.md  quickstart.md  roadmap.md  ui-design.md
scripts/: check-branch.sh  check-claims.sh  check-recall.sh  deploy.sh  detect-project.sh  graph-context.sh  hook-log.sh  hook-run.sh  mark-recall.sh  notify-aeqi.sh  notify-sigil.sh  nudge-delegation.sh  session-finalize.sh  session-primer.sh  track-edits.sh  track-skills.sh  verify-integration.sh
sg/: Cargo.toml
sigil-cli/: Cargo.toml
(+551 files in other folders)
