[package]
name = "sigil-channels"
version.workspace = true
edition.workspace = true

[dependencies]
sigil-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
